terraform/infrastructure-live-v1/staging/vpc/2-igw.tf
# Internet getway fo subnets
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "staging-igw"
  }
}
